-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.27.3 - May 15, 2022

 * playback: faster audio device open (reuse) on track switch
    with Next/Previous commands for ALSA, PulseAudio, WASAPI
 * support playback with '--dynanorm'
 - ALSA playback: some data could be skipped when seeking or starting next track
 * PulseAudio: don't hang after broken connection with server
 - PulseAudio playback: fix crash after Stop/Next/Previous commands
 - mp3 seek didn't work sometimes
 - mp3 with --stream-copy: fix;  enable ".mp3 --stream-copy --meta=..."
 - vorbis playback: skipped some data for network stream input
 - playback with --random: playback could be incorrectly stopped by "too many consecutive errors" protection
 - recording: try to open audio device with the user-specified format
    (--format/--rate/--channels options) and apply audio conversion only if it fails
 * GUI/GTK: Explorer tab: add and play only 1 selected file on double-click


fmedia v1.27.2 - Apr 20, 2022

 - .cue read: fix
 - mp3 read: couldn't parse Xing tag sometimes
 - mp3 decode: fix audio glitches after seek
 - mp3 with --stream-copy: improve accuracy
 *! disable ".mp3 --stream-copy --meta=..."


fmedia v1.27.1 - Apr 2, 2022

 - fix crash on file conversion


fmedia v1.27 - Mar 31, 2022

 + '--edit-tags': Add/Modify file's meta tags in-place
   Supported formats and tags: .mp3(ID3v2+ID3v1)
   Example:
     fmedia --edit-tags --meta='artist=ARTIST;title=TITLE' ./file.mp3

 + '--meta-from-filename=TEMPLATE': Specify template for auto-tagging from input file name
   Example how to set artist, track number and title meta tags from file name:
     fmedia --edit-tags --meta-from-filename='$artist - $tracknumber. $title' './Cool Artist - 04. Best Song.mp3'

 + GUI/Linux: edit .mp3 tags via "File"->"Edit Meta Data"
 + GUI/Linux: "List"->"Scroll To Current"